:white_check_mark: Add unhappy-path tests for an endpoint to check if users are authed